navbar fix css shifted

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -1650,3 +1650,83 @@ a:hover {
     justify-content: center;
     align-items: center;
 }
+/* nav bar fixes */
+.modal-backdrop {
+    background-color: #fff;
+}
+
+.auth-popup.modal {
+    backdrop-filter: blur(14px);
+}
+
+.auth-popup .auth-popup-close-button {
+    background: none;
+    border: none;
+}
+
+.auth-popup .modal-content {
+    background: none;
+    border: none;
+    text-align: center;
+
+}
+
+.auth-popup-body {
+    background: #FFFFFF;
+    box-shadow: 0 0 8px 7px rgb(0 0 0 / 15%);
+    border-radius: 15px;
+    padding: 2em;
+    color: #979797;
+}
+
+@media (max-width: 992px) {
+    .auth-popup-body {
+        padding: 2em 1em;
+
+    }
+}
+
+.social-button img {
+    height: 2em;
+}
+
+.social-button {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #979797;
+    font-weight: 500;
+    font-size: 1em;
+}
+
+.phone-number-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #000000;
+    padding-bottom: 5px;
+}
+
+.phone-number-arrow input {
+    background: none;
+}
+
+.phone-number-arrow * {
+    font-size: 1em;
+    border: none;
+}
+
+.phone-number-arrow .input-group-text {
+    border-radius: 4em !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2em;
+    height: 2em;
+    background: #EC268F;
+    color: white
+}
+
+/* navbar fix css end */
